# Triangles

./: .clang-format  CMakeLists.txt  README.md  debug_15.cpp  main.cpp  tree.dot
assets/: project_structure.txt  test1.txt
include/: math_utils.hpp  triangles.hpp
include/acceleration/: AABB.hpp  acceleration.hpp  bvh_tree.hpp  lbvh_tree.hpp
include/geometry/: geometry.hpp  line.hpp  plane.hpp  section.hpp  triangle.hpp  vector_3d.hpp
include/math/: math.hpp  math_utils.hpp
include/utils/: logger.hpp
source/: triangles.cpp
source/acceleration/: AABB.cpp  bvh_tree.cpp  bvh_tree_cpu.cpp  bvh_tree_gpu.cpp
source/acceleration/kernels/: lbvh.cl
source/geometry/: line.cpp  plane.cpp  section.cpp  triangle.cpp  vector_3d.cpp
tests/: CMakeLists.txt  line_test.cpp  plane_test.cpp  section_test.cpp  triangle_test.cpp  vector_3d_test.cpp
tests/end2end/: end2end_tests.txt  run.py  run_e2e_test.py
tests/unit/: CMakeLists.txt  bvh_tree_test.cpp  line_test.cpp  plane_test.cpp  section_test.cpp  triangle_intersection_e2e_test.cpp  triangle_test.cpp  vector_3d_test.cpp
